[package]
name = "ndvec"
version = "0.1.0"
edition = "2021"

description = "Simple low-dimensional vectors"
categories = ["science", "mathematics", "data-structures"]
repository = "https://github.com/tdhjm/ndvec"
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
serde_arrays = ["serde", "dep:serde_arrays"]
